data/derived/fa15/progs/unify/prog2962.ml.out
Characters 118-128:
  digitsOfIntHelper n = (n - (n mod 10)/10) :: (n mod 10) 
                                               ^^^^^^^^^^
Error: This expression has type int but an expression was expected of type
         int list
